--- a/style.css
+++ b/style.css
@@ -14,3 +14,30 @@ tlačítko Facebook:				 #3b5998
 tlačítko Facebook aktivní: #2b406e
 */
 
+body {
+    background-color: #b2bec3;
+    font-size: 18px;
+}
+
+h1 {
+    color: #d63031;
+    font-size: 36px
+}
+
+.box {
+    background-color: white;
+    border-radius: 10px;
+    padding: 30px;
+    width: 550px;
+}
+
+img {
+    width: 150px;
+    border: 3px solid white;
+    border-radius: 50%;
+}
+
+a {
+    display: block;
+    text-decoration: none;
+}
